--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Felipe Rodríguez | Software Engineer </title>
+</head>
+<body>
+    <section>
+        <header>
+            <a href="#" target="_blank" class="logo"></a>
+            <ul class="navigation">
+                <li><a href="#">De Mi</a></li>
+                <li><a href="#">Trabajos</a></li>
+                <li><a href="#">Projectos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </header>
+
+        <div class="content">
+            <h2>Felipe Rodríguez</h2>
+            <p>Descripcion
+
+            </p>
+            <a href="#">Leer Más</a>
+        </div>
+    </section>
+</body>
+</html>
